--- a/less/main-page.less
+++ b/less/main-page.less
@@ -1,6 +1,7 @@
 .homePage {
-
+    margin: 30px auto;
     .mainImg {
+        margin-top: 93px;
         max-height: 750px;
         height: 750px;
         background-image: url(../images/main-img.jpeg);
@@ -14,7 +15,7 @@
         max-height: 1000px;
         text-align: center;
         border: 1px solid @borderColor;
-        background: #d4d4d4d7;
+        background: @bgColor;
 
             h2 {
                     margin: 25px;                
@@ -45,7 +46,7 @@
                 .cardContent {
                     width: 100%;
                     display: flex;
-                    justify-content: space-evenly;
+                    justify-content: space-between;
 
                     .cards {
                         width: 30%;
